--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
         <!-- New: Project Image -->
         <div class="project-image-container">
-          <img src="images/LWC_Algorithm.png" alt="LWC Algorithm FPGA Diagram">
+          <img src="images/LWC_algorithm.png" alt="LWC Algorithm FPGA Diagram">
         </div>
         <h3>LWC Algorithm on FPGA, using Verilog coding</h3> <br>
         <p> Designed and implemented a high-speed, FPGA-based light-weight cryptographic (LWC) accelerator
@@ -68,7 +68,7 @@
       <div class="project-card" data-aos="zoom-in" data-aos-delay="300">
         <!-- New: Project Image -->
         <div class="project-image-container">
-          <img src="images/Data_Processing.png" alt="Data preprocessing and organization">
+          <img src="images/Data_Preprocessing.png" alt="Data preprocessing and organization">
         </div>
         <h3>Data Cleaning, Preprocessing and Management of Employee Datasets</h3><br>
         <p> Cleaned, preprocessed, structured and analyzed employee data sets to enhance consistency and
