--- a/index.html
+++ b/index.html
@@ -51,19 +51,20 @@
         <div class="project-image-container">
           <img src="images/student_database_management.png" alt="Student Result Management System">
         </div>
-        <h3>Student Result Management System (With Login & Admin Panel)</h3><br>
-        <p> Designed a web-based system with secure login and admin panel for managing student records
-        and results. Built with Python, MySQL, and Linux deployment, features user authentication and
-        CRUD operations.</p>
+        <h3>Intelligent Document Analysis and Content Ranking</h3><br>
+        <p> Developed an end-to-end Python pipeline to semantically analyze and rank content across
+ multiple PDF documents, implementing custom heading extraction, thereby delivering a
+ prioritized, multi-source insights from unstructured data to accelerate user research.</p>
       </div>
       <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
         <!-- New: Project Image -->
         <div class="project-image-container">
           <img src="images/LWC_algorithm.png" alt="LWC Algorithm FPGA Diagram">
         </div>
-        <h3>LWC Algorithm on FPGA, using Verilog coding</h3> <br>
-        <p> Designed and implemented a high-speed, FPGA-based light-weight cryptographic (LWC) accelerator
-        using System Verilog coding, optimizing performance for secure IoT applications.</p>
+        <h3>Student Result Management System (With Login & Admin Panel)</h3> <br>
+        <p> Built a web-based Student Result Management System with secure login and role-based access
+ for admins and students. Implemented using HTML, CSS, JS, and Firebase for auth and
+ Firestore for data. Includes authentication, access control, and full CRUD on student records.</p>
       </div>
       <div class="project-card" data-aos="zoom-in" data-aos-delay="300">
         <!-- New: Project Image -->
