--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
   <section id="about" data-aos="fade-up">
     <h2>About Me</h2><br>
-    <p>I'm a passionate engineering student with strong foundational knowledge in electronics and a keen interest in web development and design. I believe I am highly skilled at applying theoretical knowledge to practical projects, with strong problem-
-    solving skills and a collaborative mindset. I am also highly adaptible to varied work environments and am always curious to learn something new.</p>
+    <p>An Electronics and Communication Engineering student driven by a deep curiosity for both how
+ electronics work and what we can build with code. I'm excited to apply my engineering mindset to
+ find creative solutions in software development and data science.</p>
   </section>
   <section id="projects" data-aos="fade-up">
     <h2>Projects</h2><br>
