--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="project-card" data-aos="zoom-in" data-aos-delay="100">
         <!-- New: Project Image -->
         <div class="project-image-container">
-          <img src="images/student_database_management.png" alt="Student Result Management System">
+          <img src="images/intelligent.png" alt="Intelligent Document Analysis">
         </div>
         <h3>Intelligent Document Analysis and Content Ranking</h3><br>
         <p> Developed an end-to-end Python pipeline to semantically analyze and rank content across
@@ -60,7 +60,7 @@
       <div class="project-card" data-aos="zoom-in" data-aos-delay="200">
         <!-- New: Project Image -->
         <div class="project-image-container">
-          <img src="images/LWC_algorithm.png" alt="LWC Algorithm FPGA Diagram">
+          <img src="images/student_result.png" alt="Student Result Management System">
         </div>
         <h3>Student Result Management System (With Login & Admin Panel)</h3> <br>
         <p> Built a web-based Student Result Management System with secure login and role-based access
@@ -70,7 +70,7 @@
       <div class="project-card" data-aos="zoom-in" data-aos-delay="300">
         <!-- New: Project Image -->
         <div class="project-image-container">
-          <img src="images/Data_Preprocessing.png" alt="Data preprocessing and organization">
+          <img src="images/data_cleaning.png" alt="Data preprocessing and organization">
         </div>
         <h3>Data Cleaning, Preprocessing and Management of Employee Datasets</h3><br>
         <p> Cleaned, preprocessed, structured and analyzed employee data sets to enhance consistency and
